--- a/sidebar.html
+++ b/sidebar.html
@@ -1,7 +1,7 @@
 <!-- sidebar.html -->
 <div class="sidebar-header">
     <img src="icon.svg" class="logo-icon" alt="Heroku Icon" />
-    <h1>Heroku<br>Docs</h1>
+    <h1>Heroku<br>Documentation</h1>
 </div>
 <ul class="sidebar-nav-list">
     <li><a href="index.html" class="nav-link">Introduction</a></li>
