--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -16,7 +16,7 @@
     </nav>
 
     <main class="content">
-        <h1>TODO</h1>
+        <h1>Has not be found at the moment</h1>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
