--- a/database-operations.html
+++ b/database-operations.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heroku UserBot Docs - Setup Guide</title>
+    <title>Heroku UserBot Docs - Database</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-okaidia.min.css">
     <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
 
     <main class="content">
         <h1>Database operations</h1>
-        <p>Hikka has a built-in database. You can use it to persistently store data required for your module to work. First way is to use database object directly:</p>
+        <p>Heroku has a built-in database. You can use it to persistently store data required for your module to work. First way is to use database object directly:</p>
         <ul>
             <li><code>self._db.get(owner, value, default)</code></li>
             <li><code>self._db.set(owner, value, data)</code></li>
