--- a/quickstart.html
+++ b/quickstart.html
@@ -20,8 +20,8 @@
         <h1>Quickstart Development</h1>
         <p>In order to write your first module, let's take a look at the basic structure:</p>
         <pre><code class="language-python">
-from hikkatl.types import Message
-from .. import loader
+from herokutl.types import Message
+from .. import loader, utils
 
 
 @loader.tds
@@ -29,21 +29,19 @@ class MyModule(loader.Module):
     """My module"""
     strings = {"name": "MyModule", "hello": "Hello world!"}
     strings_ru = {"hello": "Привет мир!"}
-    strings_es = {"hello": "¡Hola mundo!"}
     strings_de = {"hello": "Hallo Welt!"}
 
     @loader.command(
         ru_doc="Привет мир!",
-        es_doc="¡Hola mundo!",
         de_doc="Hallo Welt!",
         # ...
     )
     async def helloworld(self, message: Message):
         """Hello world"""
-        await utils.answer(message, self.strings("hello"))
+        await utils.answer(message, self.strings["hello"])
     </code></pre>
 
-    <p>The first line imports the <code>Message</code> type from hikkatl.types and the loader module from <code>..</code>. The <code>loader</code> module contains all the necessary functions and classes to create a module.</p>
+    <p>The first line imports the <code>Message</code> type from herokutl.types and the loader module from <code>..</code>. The <code>loader</code> module contains all the necessary functions and classes to create a module.</p>
     <p><code>@loader.tds</code> is a decorator that makes module translateable (<code>tds</code> comes from <code>translateable_docstring</code>). In the class docstring you should specify brief information about the module so that user, that reads it can understand, what it does.</p>
     <p>The <code>strings</code> dictionary is a special object, that contains translations for translateable strings. Suffix with desired language will allow user to use the module in the selected language. If there is no translation for the selected language, the default one will be used.</p>
     <p>The <code>@loader.command</code> decorator is used to mark a function as a command. It takes a lot of arguments. Most important ones are translations. <code>XX_doc</code> makes description for command in the language XX.</p>    
