--- a/basic-commands.html
+++ b/basic-commands.html
@@ -17,7 +17,60 @@
     </nav>
 
     <main class="content">
-        <h1>TODO</h1>
+        <section id="commands" class="commands">
+            <h2>Basic Commands</h2>
+            <div class="commands-grid">
+                <div class="command-card">
+                    <code>.help</code>
+                    <p>Show all available commands</p>
+                </div>
+                <div class="command-card">
+                    <code>.cfg</code>
+                    <p>Configure modules</p>
+                </div>
+                <div class="command-card">
+                    <code>.e &lt;query&gt;</code>
+                    <p>Execution the python code</p>
+                </div>
+                <div class="command-card">
+                    <code>.dlm &lt;link/name&gt;</code>
+                    <p>Download a module</p>
+                </div>
+                <div class="command-card">
+                    <code>.ping</code>
+                    <p>Check if bot is alive</p>
+                </div>
+                <div class="command-card">
+                    <code>.update</code>
+                    <p>Update the bot</p>
+                </div>
+                <div class="command-card">
+                    <code>.herokuinfo</code>
+                    <p>Information of Userbot</p>
+                </div>
+                <div class="command-card">
+                    <code>.ch_heroku_bot &lt;username&gt;</code>
+                    <p>Change your bot username</p>
+                </div>
+                <div class="command-card">
+                    <code>.ulm &lt;query&gt;</code>
+                    <p>Unload module</p>
+                </div>
+                <div class="command-card">
+                    <code>.lm &lt;reply&gt;</code>
+                    <p>Load module from reply</p>
+                </div>
+                <div class="command-card">
+                    <code>.restart</code>
+                    <p>Restarts your Heroku</p>
+                </div>
+                <div class="command-card">
+                    <code>.logs</code>
+                    <p>Show your Heroku Logs</p>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
