--- a/setup-guide.html
+++ b/setup-guide.html
@@ -16,7 +16,25 @@
     </nav>
 
     <main class="content">
-        <h1>TODO</h1>
+        <h1>Getting started</h1>
+
+        <p>Welcome to the Usbot documentation! This guide will help you get started quickly.</p>
+
+        <h2>Installation</h2>
+        <p>To install, follow these steps:</p>
+        <ol>
+        <li>Clone the repository: <pre><code class="language-bash">git clone <a href ="https://github.com/coddrago/Heroku/">https://github.com/coddrago/Heroku</a> </code></pre></li>
+        <li>Go to the folder: <pre><code class="language-bash">cd Heroku</code></pre></li>
+        <li>Install the dependencies: <pre><code class="language-bash">pip install -r requirements.txt </code></pre></li>
+        </ol>
+
+        <div class="callout note">
+            <strong>The Council:</strong> It is recommended to use a Python virtual environment.
+        </div>
+
+        <h2>The first launch</h2>
+        <p>To launch the bot, use the <code>python3 -m heroku</code>.</p>
+        <p>If you encounter any problems, check the <a href="faq.html ">FAQ</a>.</p>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
