--- a/sidebar.html
+++ b/sidebar.html
@@ -15,8 +15,8 @@
         <a href="basic-commands.html" class="nav-link nav-parent-link">Usage</a>
         <ul class="submenu">
             <li><a href="basic-commands.html" class="nav-link">Basic Commands</a></li>
-            <li><a href="using-modules.html" class="nav-link">Using Modules</a></li>
-            <li><a href="advanced-features.html" class="nav-link">Advanced Features</a></li>
+            <li><a href="channel-modules.html" class="nav-link">Channel Modules</a></li>
+            <!-- <li><a href="advanced-features.html" class="nav-link">Advanced Features</a></li> -->
         </ul>
     </li>
     <li class="has-submenu">
