--- a/setup-guide.html
+++ b/setup-guide.html
@@ -18,7 +18,7 @@
     <main class="content">
         <h1>Getting started</h1>
 
-        <p>Welcome to the Usbot documentation! This guide will help you get started quickly.</p>
+        <p>Welcome to the Heroku Userbot documentation! This guide will help you get started quickly.</p>
 
         <h2>Installation</h2>
         <p>To install, follow these steps:</p>
